# datetime-reader

./: Cargo.toml  README.md  pyproject.toml
src/: lib.rs  reader.rs
test/: test.py
