[tool.poetry]
name = "datetime-reader"
version = "0.1.0"
description = ""
authors = ["Stephan Malan"]
readme = "README.md"
packages = [{include = "datetime-reader"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pylint = "^2.15.10"
mypy = "^0.991"
ruff = "^0.0.246"
maturin = "^0.14.13"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core", "maturin>=0.14,<0.15"]
# build-backend = "poetry.core.masonry.api"
build-backend = "maturin"

[project]
name = "datetime-reader"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


